--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "@types/jest": "^29.5.5",
     "commitlint": "^17.7.2",
     "eslint": "^8.51.0",
@@ -36,7 +38,6 @@
     }
   },
   "dependencies": {
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0"
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0"
   }
 }
